<resources>
    <string name="app_name">CINETEC</string>
    <string name="login_user_label">Ingrese su usuario</string>
    <string name="login_user_hint">Usuario</string>
    <string name="login_user_label_password">Ingrese su contraseña</string>
    <string name="login_user_hint_password">Contraseña</string>
    <string name="login_button_text">Ingresar</string>
    <string name="movies_button_text">Horarios</string>
    <string name="cinema_selection_label">Seleccion de Cine</string>
    <string name="movie_selection_label">Seleccion de Pelicula</string>
    <string name="tickets_selection_label">Por Favor Seleccione Sus Tickets</string>
    <string name="Adult">Adultos</string>
    <string name="Elder">Adulto Mayor</string>
    <string name="Children">Niños</string>
    <string name="projection_label">Seleccione la projeccion que desea</string>
    <string name="seat_label">Seleccione asientos</string>
    <string name="seat_button_text">Reservar</string>
    <string name="tickets_button_text">Comprar Boletos</string>
</resources>