<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ScreenApp.Login_Activity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:backgroundTintMode="src_in"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="#00FFFFFF"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="54sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_label_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/login_user_label"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_entry_user"
            android:layout_width="331dp"
            android:layout_height="63dp"
            android:layout_marginTop="24dp"

            android:hint="@string/login_user_hint"
            android:textColor="@color/white"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_label_user" />

        <TextView
            android:id="@+id/login_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login_user_label_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf= "parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_entry_user" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_entry_password"
            android:layout_width="331dp"
            android:layout_height="59dp"

            android:layout_marginTop="24dp"
            android:hint="@string/login_user_hint_password"
            android:textColor="@color/white"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_label_password" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/proyection_button"
            android:layout_width="326dp"
            android:layout_height="72dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/black"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_entry_password"
            app:layout_constraintVertical_bias="0.129"
            app:cornerRadius="10dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>