<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ScreenApp.Cinema_select">

  <TextView
      android:id="@+id/cinema_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:textSize="50sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/cinema_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:gravity="center_horizontal|center_vertical"
      android:text="@string/seat_label"
      android:textColor="@color/white"
      android:textSize="28sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cinema_title" />

  <ScrollView
      android:id="@+id/scrollView2"
      android:layout_width="351dp"
      android:layout_height="324dp"
      android:layout_marginTop="40dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cinema_subtitle">

    <com.example.cinetec.customviews.Matrix_layout
        android:id="@+id/seat_selecction_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
  </ScrollView>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/select_seat_button"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="326dp"
      android:layout_height="72dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@color/black"
      android:text="@string/seat_button_text"
      android:textColor="@color/white"
      app:cornerRadius="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/scrollView2"
      app:strokeColor="@color/white"
      app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>