<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ScreenApp.Movie_selection">

    <TextView
        android:id="@+id/ticket_selection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_selection_subtitle"
        android:layout_width="242dp"
        android:layout_height="93dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/tickets_selection_label"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_selection_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="243dp"
        android:layout_height="64dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_selection_subtitle">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/children_left_button"

            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:width="40dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="50dp"
            app:icon="@drawable/left_arrow"
            app:iconGravity="textTop"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/children_right_button"

            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:width="40dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="50dp"
            app:icon="@drawable/right_arrow"
            app:iconGravity="textTop"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/children_left_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/children_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/children_right_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/children" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="243dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/adult_left_button"

            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:width="40dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="50dp"
            app:icon="@drawable/left_arrow"
            app:iconGravity="textTop"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/adult_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/adult_right_button"

            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:width="40dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="50dp"
            app:icon="@drawable/right_arrow"
            app:iconGravity="textTop"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/adult_left_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/adult_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/adult_right_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/adult_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/adult" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="243dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/elder_left_button"

            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:width="40dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="50dp"
            app:icon="@drawable/left_arrow"
            app:iconGravity="textTop"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/elder_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/elder_right_button"

            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:width="40dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="50dp"
            app:icon="@drawable/right_arrow"
            app:iconGravity="textTop"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/elder_left_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/elder_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/elder_right_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/elder_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/elderly" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_tickets_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="327dp"
        android:layout_height="74dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/tickets_button_text"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>